--- a/Latex/texto.bib
+++ b/Latex/texto.bib
@@ -33,4 +33,19 @@ BOOKTITLE    = {Proceedings of Imaging Understanding Workshop},
 YEAR         = {1981},
 Pages        = {121-130},
 }
+@misc{googlesensor,
+  title = {Sensor Fusion on Android Devices: A Revolution in Motion Processing},
+  author = {David Sachs},
+  howpublished = {\url{http://www.youtube.com/watch?v=C7JQ7Rpwn2k}},
+  note = {min 23:20}
+}
+
+@CONFERENCE{illuFace,
+AUTHOR       = {Xiaoyang Tan and Bill Triggs}, 
+TITLE        = {Enhanced Local Texture Feature Sets for Face Recognition Under Difficult Lighting Conditions},
+BOOKTITLE    = {IEEE Transactions on Image Processing 19},
+YEAR         = {2010},
+Pages        = {1635-1650},
+}
+
 
