--- a/Latex/texto.bib
+++ b/Latex/texto.bib
@@ -48,4 +48,39 @@ YEAR         = {2010},
 Pages        = {1635-1650},
 }
 
+@booklet{opencvrefman,
+    title     = {The OpenCV Reference Manual},
+    howpublished   = {\url{http://docs.opencv.org/opencv2refman.pdf}},
+    year      = {2013},
+}
+@booklet{numpyrefman,
+    title     = {The NumPy Reference Manual},
+    howpublished   = {\url{http://docs.scipy.org/doc/numpy/numpy-ref-1.8.0.pdf}},
+    year      = {2013},
+}
+@misc{androidref,
+  title = {Android reference},
+  howpublished = {\url{http://developer.android.com/reference}},
+}
+@misc{gaussian,
+  title = {Edge Detection and Gaussian related mathematics},
+  author = {Bryan S. Morse},
+  howpublished = {\url{http://homepages.inf.ed.ac.uk/rbf/CVonline/LOCAL_COPIES/MORSE/edges.pdf}},
+}
+
+@article{Kug75,
+
+author = {Kuglin, C. D. and Hines, D. C.},
+
+citeulike-article-id = {476148},
+
+journal = {IEEE Conference on Cybernetics and Society},
+
+pages = {163--165},
+
+title = {{The phase correlation image alignment method}},
+
+year = {1975}
+
+}
 
